--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="logo logo_palace_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#header__link" class="link header__link">Узнать</a></p>
-      <img src="./images/header-image.png" class="header__main-illustration" alt="main-illustration">
+      <img src="./images/header-image.png" class="header__main-illustration" alt="опять двойка">
       <div class="header__square-pic"></div>
     </header> 
     <content>
@@ -73,7 +73,7 @@
         <a href="#" class="link feynman__link">Подробнее</a>
       </section>
       <section class="kaufman" id="header__link">
-        <img class="kaufman__triangle" src="./images/kaufman-triangle.svg" alt="kaufman-triangle">
+        <img class="kaufman__triangle" src="./images/kaufman-triangle.svg" alt="треугольник">
         <div class="section-title section-title__theme__dark">Принципы обучения</div>
         <div class="section-subtitle section-subtitle__theme_dark">от Джоша Кауфмана</div>
         <div class="table table__theme_dark">
@@ -138,9 +138,9 @@
         <div class="footer__columns__socials">
           <div class="footer__column-heading">Соцсети</div>
           <ul class="footer__social-icon">
-            <li><a href="#" class="footer__links "><img src="./images/facebook_color_white.svg" alt="Facebook" class="footer__social-icon__size"><p class="footer__links__padding">Facebook</p></a></li>
-            <li><a href="#" class="footer__links "><img src="./images/vk_color_white.svg" alt="VK" class="footer__social-icon__size"><p class="footer__links__padding">ВКонтакте</p></a></li>
-            <li><a href="#" class="footer__links "><img src="./images/instagram_color_white.svg" alt="Instagram" class="footer__social-icon__size"><p class="footer__links__padding">Instagram</p></a></li>
+            <li><a href="#" class="footer__links "><img src="./images/facebook_color_white.svg" alt="фейсбук" class="footer__social-icon__size"><p class="footer__links__padding">Facebook</p></a></li>
+            <li><a href="#" class="footer__links "><img src="./images/vk_color_white.svg" alt="вк" class="footer__social-icon__size"><p class="footer__links__padding">ВКонтакте</p></a></li>
+            <li><a href="#" class="footer__links "><img src="./images/instagram_color_white.svg" alt="инстаграм" class="footer__social-icon__size"><p class="footer__links__padding">Instagram</p></a></li>
           </ul>
         </div>
       </div>
