--- a/index.html
+++ b/index.html
@@ -3,146 +3,146 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles/style.css">
   <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
     <header class="header">
-      <div class="logo logo_palace_header"></div>
+      <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#header__link" class="link header__link">Узнать</a></p>
       <img src="./images/header-image.png" class="header__main-illustration" alt="опять двойка">
       <div class="header__square-pic"></div>
     </header> 
-    <content>
+    <main>
       <section class="description">
-        <div class="two-columns">
-          <p class="two-columns__brief">Главные проблемы в обучении</p>
+        <article class="two-columns">
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
           <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не даёт нам реального знания. Зубрежка быстро выветривается и не приносит пользы</p>
           <p class="two-columns__paragraph"> <span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
           <p class="two-columns__paragraph"> Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
-        </div>
+        </article>
       </section> 
       <section class="degits">
-        <h1 class="section-title">Цифры и факты</h1> 
-        <h2 class="section-subtitle">Про учёбу и мозг</h2>
+        <h2 class="section-title">Цифры и факты</h2> 
+        <h3 class="section-subtitle">Про учёбу и мозг</h3>
         <div class="table">
           <div class="table__cell">
-            <p class="table__heading">86 миллиардов</p>
+            <h4 class="table__heading">86 миллиардов</h4>
             <p class="table__text">Число нейронов в мозге человека</p>
           </div>
           <div class="table__cell">
-            <p class="table__heading">2,1 миллиарда</p>
+            <h4 class="table__heading">2,1 миллиарда</h4>
             <p class="table__text">Число нуждающихся в повышении квалификации</p>
             <p class="table__text">Всемирный банк, 2017</p>
           </div>
           <div class="table__cell">
-            <p class="table__heading">1000 терабайт</p>
+            <h4 class="table__heading">1000 терабайт</h4>
             <p class="table__text">Объём памяти человека</p>
           </div>
           <div class="table__cell">
-            <p class="table__heading">500 триллионов </p>
+            <h4 class="table__heading">500 триллионов </h4>
             <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </div>
           <div class="table__cell">
-            <p class="table__heading">420 миллионов </p>
+            <h4 class="table__heading">420 миллионов </h4>
             <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
             <p class="table__text">Всемирный банк, 2017</p>  
           </div>
           <div class="table__cell">
-            <p class="table__heading">17-20 лет</p>
+            <h4 class="table__heading">17-20 лет</h4>
             <p class="table__text">Пик обучаемости</p>
           </div>
           <div class="table__cell">
-            <p class="table__heading">1885 год</p>
+            <h4 class="table__heading">1885 год</h4>
             <p class="table__text">Открытие кривой забвения</p>
           </div>
           <div class="table__cell">
-            <p class="table__heading">1889 год </p>
+            <h4 class="table__heading">1889 год </h4>
             <p class="table__text">Открытие условного рефлекса</p>
           </div> 
         </div>
       </section>
       <section class="feynman">
-        <div class="feynman__title">Метод Фейнмана</div>
-        <div class="feynman__subtitle">Выучить и не забыть.</div>
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
         <a href="#" class="link feynman__link">Подробнее</a>
       </section>
       <section class="kaufman" id="header__link">
-        <img class="kaufman__triangle" src="./images/kaufman-triangle.svg" alt="треугольник">
-        <div class="section-title section-title__theme__dark">Принципы обучения</div>
-        <div class="section-subtitle section-subtitle__theme_dark">от Джоша Кауфмана</div>
-        <div class="table table__theme_dark">
-          <div class="table__cell_dark">
-            <p class="table__heading__dark">1</p>
-            <p class="table__text__dark">Выберете привлекательный проект.</p>
+        <div class="kaufman__triangle"></div>
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
+        <div class="table table_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">1</h3>
+            <p class="table__text table__text_theme_dark">Выберете привлекательный проект.</p>
           </div>
-          <div class="table__cell_dark">
-            <p class="table__heading__dark">2</p>
-            <p class="table__text__dark">Сосредоточтесь на каком-то одном навыке.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">2</h3>
+            <p class="table__text table__text_theme_dark">Сосредоточтесь на каком-то одном навыке.</p>
           </div>
-          <div class="table__cell_dark">
-            <p class="table__heading__dark">3</p>
-            <p class="table__text__dark">Определите целевой уровень мастерства.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">3</h3>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
           </div>
-          <div class="table__cell_dark">
-            <p class="table__heading__dark">4</p>
-            <p class="table__text__dark">Разбейте навык на элементы.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">4</h3>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
           </div>
-          <div class="table__cell_dark">
-            <p class="table__heading__dark">5</p>
-            <p class="table__text__dark">Приготовьте всё необходимое для занятий.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">5</h3>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
           </div>
-          <div class="table__cell_dark">
-            <p class="table__heading__dark">6</p>
-            <p class="table__text__dark">Устраните препятствия для занятий.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">6</h3>
+            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
           </div>
-          <div class="table__cell_dark">
-            <p class="table__heading__dark">7</p>
-            <p class="table__text__dark">Выделите специальное время для занятий.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">7</h3>
+            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
           </div>
-          <div class="table__cell_dark">
-            <p class="table__heading__dark">8</p>
-            <p class="table__text__dark">Создайте быстрые петли обратной связи.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">8</h3>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
           </div>
-          <div class="table__cell_dark">
-            <p class="table__heading__dark">9</p>
-            <p class="table__text__dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">9</h3>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </div>
-          <div class="table__cell_dark">
-            <p class="table__heading__dark">10</p>
-            <p class="table__text__dark">Уделяйте внимание количеству и скорости.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">10</h3>
+            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div> 
       </section>
-    </content>
+    </main>
     <!-- Footer -->
     <footer class="footer">
       <div class="footer__columns">       
-        <div class="footer__columns__copyright">
-          <div class="logo logo_palace_footer"></div>
-          <div class="footer__author">&copy Andrey Salnikov</div>
+        <div class="footer__column footer__column_content_copyright">
+          <div class="logo logo_place_footer"></div>
+          <p class="footer__author">&copy; Andrey Salnikov</p>
         </div>
-        <div class="footer__columns__info">
-          <div class="footer__column-heading">О практикуме</div>
+        <nav class="footer__column footer__columns_content_info">
+          <h3 class="footer__column-heading">О практикуме</h3>
           <ul class="footer__column-links">
-            <li><a href="#" class="footer__links">Главная</a></li>
-            <li><a href="#" class="footer__links">Концепция</a></li>
-            <li><a href="#" class="footer__links">Наставники</a></li>
+            <li><a href="#" class="footer__column-link">Главная</a></li>
+            <li><a href="#" class="footer__column-link">Концепция</a></li>
+            <li><a href="#" class="footer__column-link">Наставники</a></li>
           </ul>
-        </div>
-        <div class="footer__columns__socials">
-          <div class="footer__column-heading">Соцсети</div>
-          <ul class="footer__social-icon">
-            <li><a href="#" class="footer__links "><img src="./images/facebook_color_white.svg" alt="фейсбук" class="footer__social-icon__size"><p class="footer__links__padding">Facebook</p></a></li>
-            <li><a href="#" class="footer__links "><img src="./images/vk_color_white.svg" alt="вк" class="footer__social-icon__size"><p class="footer__links__padding">ВКонтакте</p></a></li>
-            <li><a href="#" class="footer__links "><img src="./images/instagram_color_white.svg" alt="инстаграм" class="footer__social-icon__size"><p class="footer__links__padding">Instagram</p></a></li>
+        </nav>
+        <nav class="footer__column footer__columns_content_socials">
+          <h3 class="footer__column-heading">Соцсети</h3>
+          <ul class="footer__column-links">
+            <li><a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="фейсбук" class="footer__social-icons">Facebook</a></li>
+            <li><a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="вк" class="footer__social-icons">ВКонтакте</a></li>
+            <li><a href="#" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt="инстаграм" class="footer__social-icons">Instagram</a></li>
           </ul>
-        </div>
+        </nav>
       </div>
     </footer>
   </div>
