--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Научиться учиться</title>
 </head>
 <body>
-  <div class="page">
+  <div class="page-root">
     <header class="header">
       <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
@@ -29,40 +29,40 @@
       <section class="techniques">
         <h2 class="section-title">Техники обучения</h2>
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
-        <div class="cards">
-          <ul class="cards__item">
-            <li><img class="cards__image" src="./images/attention.png" alt="два вида понимая"></li>
-            <li><h3 class="cards__title">Два вида внимания</h3></li>
-            <li><p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p></li>
-          </ul>
-          <ul class="cards__item">
-            <li><img class="cards__image" src="./images/recall.png" alt="призыв"></li>
-            <li><h3 class="cards__title">Recall</h3></li>
-            <li><p class="cards__description">Вспоминайте изученное - это позволит соединить разрозненные порции памяти.</p></li>
-          </ul>
-          <ul class="cards__item">
-            <li><img class="cards__image" src="./images/interliving.png" alt="интерливинг"></li>
-            <li><h3 class="cards__title">Интерливинг</h3></li>
-            <li><p class="cards__description">Изучайте несколько навыков одновременно,они обогощают друг друга.</p></li>
-          </ul>
-          <ul class="cards__item">
-            <li><img class="cards__image" src="./images/question.png" alt="вопросы"></li>
-            <li><h3 class="cards__title">Вопросы</h3></li>
-            <li><p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p></li>
-          </ul>
-          <ul class="cards__item">
-            <li><img class="cards__image" src="./images/competence.png" alt="иллюзия компетентности"></li>
-            <li><h3 class="cards__title">Иллюзия компетентности</h3></li>
-            <li><p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p></li>
-          </ul>
-        </div>
+        <ul class="cards">
+          <li class="cards__item">
+            <img class="cards__image" src="./images/attention.png" alt="два вида понимая">
+            <h3 class="cards__title">Два вида внимания</h3>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/recall.png" alt="призыв">
+            <h3 class="cards__title">Recall</h3>
+            <p class="cards__description">Вспоминайте изученное - это позволит соединить разрозненные порции памяти.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/interliving.png" alt="интерливинг">
+            <h3 class="cards__title">Интерливинг</h3>
+            <p class="cards__description">Изучайте несколько навыков одновременно,они обогощают друг друга.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/question.png" alt="вопросы">
+            <h3 class="cards__title">Вопросы</h3>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/competence.png" alt="иллюзия компетентности">
+            <h3 class="cards__title">Иллюзия компетентности</h3>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+          </li>
+        </ul>
       </section>
       <section class="video">
         <h2 class="section-title">Видео на TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокарстинировать</p>
         <ul class="video__iframes">
           <li class="video__li">
-            <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+            <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
             </iframe>
           </li>
           <li class="video__li">
@@ -87,42 +87,42 @@
       <section class="degits">
         <h2 class="section-title">Цифры и факты</h2>
         <p class="section-subtitle">Про учёбу и мозг</p>
-        <div class="table">
-          <ul class="table__cell">
-            <li><h3 class="table__heading">86 миллиардов</h3></li>
-            <li><p class="table__text">Число нейронов в мозге человека</p></li>
-          </ul>
-          <ul class="table__cell">
-            <li><h3 class="table__heading">2,1 миллиарда</h3></li>
-            <li><p class="table__text">Число нуждающихся в повышении квалификации</p></li>
-            <li><p class="table__text">Всемирный банк, 2017</p></li>
-          </ul>
-          <ul class="table__cell">
-            <li><h3 class="table__heading">1000 терабайт</h3></li>
-            <li><p class="table__text">Объём памяти человека</p></li>
-          </ul>
-          <ul class="table__cell">
-            <li><h3 class="table__heading">500 триллионов</h3></li>
-            <li><p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p></li>
-          </ul>
-          <ul class="table__cell">
-            <li><h3 class="table__heading">420 миллионов </h3></li>
-            <li><p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p></li>
-            <li><p class="table__text">Всемирный банк, 2017</p></li>
-          </ul>
-          <ul class="table__cell">
-            <li><h3 class="table__heading">17-20 лет</h3></li>
-            <li><p class="table__text">Пик обучаемости</p></li>
-          </ul>
-          <ul class="table__cell">
-            <li><h3 class="table__heading">1885 год</h3></li>
-            <li><p class="table__text">Открытие кривой забвения</p></li>
-          </ul>
-          <ul class="table__cell">
-            <li><h3 class="table__heading">1889 год</h3></li>
-            <li><p class="table__text">Открытие условного рефлекса</p></li>
-          </ul>
-        </div>
+        <ul class="table">
+          <li class="table__cell">
+            <h3 class="table__heading">86 миллиардов</h3>
+            <p class="table__text">Число нейронов в мозге человека</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">2,1 миллиарда</h3>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text">Всемирный банк, 2017</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">1000 терабайт</h3>
+            <p class="table__text">Объём памяти человека</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">500 триллионов</h3>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">420 миллионов </h3>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text">Всемирный банк, 2017</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">17-20 лет</h3>
+            <p class="table__text">Пик обучаемости</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">1885 год</h3>
+            <p class="table__text">Открытие кривой забвения</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">1889 год</h3>
+            <p class="table__text">Открытие условного рефлекса</p>
+          </li>
+        </ul>
       </section>
       <section class="khan">
         <div class="khan__container">
@@ -141,48 +141,48 @@
         <div class="kaufman__triangle rotation"></div>
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
-        <div class="table table_theme_dark">
-          <ol class="table__cell table__cell_theme_dark">
-            <li><h3 class="table__heading table__heading_theme_dark">1</h3></li>
-            <li><p class="table__text table__text_theme_dark">Выберете привлекательный проект.</p></li>
-          </ol>
-          <ol class="table__cell table__cell_theme_dark">
-            <li><h3 class="table__heading table__heading_theme_dark">2</h3></li>
-            <li><p class="table__text table__text_theme_dark">Сосредоточтесь на каком-то одном навыке.</p></li>
-          </ol>
-          <ol class="table__cell table__cell_theme_dark">
-            <li><h3 class="table__heading table__heading_theme_dark">3</h3></li>
-            <li><p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p></li>
-          </ol>
-          <ol class="table__cell table__cell_theme_dark">
-            <li><h3 class="table__heading table__heading_theme_dark">4</h3></li>
-            <li><p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p></li>
-          </ol>
-          <ol class="table__cell table__cell_theme_dark">
-            <li><h3 class="table__heading table__heading_theme_dark">5</h3></li>
-            <li><p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p></li>
-          </ol>
-          <ol class="table__cell table__cell_theme_dark">
-            <li><h3 class="table__heading table__heading_theme_dark">6</h3></li>
-            <li><p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p></li>
-          </ol>
-          <ol class="table__cell table__cell_theme_dark">
-            <li><h3 class="table__heading table__heading_theme_dark">7</h3></li>
-            <li><p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p></li>
-          </ol>
-          <ol class="table__cell table__cell_theme_dark">
-            <li><h3 class="table__heading table__heading_theme_dark">8</h3></li>
-            <li><p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p></li>
-          </ol>
-          <ol class="table__cell table__cell_theme_dark">
-            <li><h3 class="table__heading table__heading_theme_dark">9</h3></li>
-            <li><p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p></li>
-          </ol>
-          <ol class="table__cell table__cell_theme_dark">
-            <li><h3 class="table__heading table__heading_theme_dark">10</h3></li>
-            <li><p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p></li>
-          </ol>
-        </div>
+        <ol class="table table_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">1</h3>
+            <p class="table__text table__text_theme_dark">Выберете привлекательный проект.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">2</h3>
+            <p class="table__text table__text_theme_dark">Сосредоточтесь на каком-то одном навыке.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">3</h3>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">4</h3>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">5</h3>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">6</h3>
+            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">7</h3>
+            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">8</h3>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">9</h3>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">10</h3>
+            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+          </li>
+        </ol>
       </section>
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
