--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </iframe>
           </li>
           <li class="video__li">
-            <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY?start=9" title="YouTube video player"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+            <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY?start=9" title="YouTube video player"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
             </iframe>
           </li>
         </ul>  
